--- a/.github/workflows/1stexm.yml
+++ b/.github/workflows/1stexm.yml
@@ -6,14 +6,20 @@ jobs:
   build:  # Define a specific job name
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4  # Fetches code from repository
+    - name: Echo a message
+      run: echo "This is the first step!"
+    - name: List files in the workspace
+      run: ls 
+    - name: Read the read.md file
+      run: cat README.md
+    - name: Checkout code
+      uses: actions/checkout@v4  # Fetches code from repository
 
-      - name: Echo a message
-        run: echo "This is the first step!"
+    - name: Echo a message
+      run: echo "This is the first step!"
 
-      - name: List files in the workspace
-        run: ls  # Lists all files in the current directory
+    - name: List files in the workspace
+      run: ls  # Lists all files in the current directory
 
-      - name: Read the read.md file
-        run: cat read.md  # Reads the contents of read.md
+    - name: Read the read.md file
+      run: cat README.md  # Reads the contents of read.md
